kubernetes/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: ACCESS_TOKEN_EXPIRY
              valueFrom:
                configMapKeyRef:
                  key: ACCESS_TOKEN_EXPIRY
                  name: api-configmap
            - name: ACCESS_TOKEN_SECRET
              valueFrom:
                secretKeyRef:
                  key: ACCESS_TOKEN_SECRET
                  name: api-secret
            - name: DB_DAILECT
              valueFrom:
                configMapKeyRef:
                  key: DB_DAILECT
                  name: api-configmap
            - name: DB_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: DB_DATABASE
                  name: api-configmap
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: DB_HOST
                  name: api-configmap
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_PASSWORD
                  name: api-secret
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: DB_PORT
                  name: api-configmap
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  key: DB_USERNAME
                  name: api-secret
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: api-configmap
            - name: REFRESH_TOKEN_COOKIE_NAME
              valueFrom:
                configMapKeyRef:
                  key: REFRESH_TOKEN_COOKIE_NAME
                  name: api-configmap
            - name: REFRESH_TOKEN_EXPIRY
              valueFrom:
                configMapKeyRef:
                  key: REFRESH_TOKEN_EXPIRY
                  name: api-configmap
            - name: REFRESH_TOKEN_SECRET
              valueFrom:
                secretKeyRef:
                  key: REFRESH_TOKEN_SECRET
                  name: api-secret
          image: gabrieldela/nodejs-example:1.0
          name: api
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
      restartPolicy: Always
status: {}
