kubernetes/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
